tests/ui/macros/compile_error_macro-suppress-errors.stderr
error: Error in a module
  --> $DIR/compile_error_macro-suppress-errors.rs:2:5
   |
LL |     compile_error!("Error in a module");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error in a function
  --> $DIR/compile_error_macro-suppress-errors.rs:23:9
   |
LL |         compile_error!("Error in a function");
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `crate::another_module::NotExist`
  --> $DIR/compile_error_macro-suppress-errors.rs:11:13
   |
LL |         use crate::another_module::NotExist;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `NotExist` in `another_module`

error[E0433]: failed to resolve: could not find `Hello` in `another_module`
  --> $DIR/compile_error_macro-suppress-errors.rs:37:55
   |
LL |     let _: another_module::SomeType = another_module::Hello::new();
   |                                                       ^^^^^ could not find `Hello` in `another_module`

error[E0425]: cannot find type `MissingType` in module `self`
  --> $DIR/compile_error_macro-suppress-errors.rs:15:26
   |
LL |             error: self::MissingType,
   |                          ^^^^^^^^^^^ not found in `self`

error[E0425]: cannot find function `some_function` in module `another_module`
  --> $DIR/compile_error_macro-suppress-errors.rs:35:29
   |
LL |     let _ = another_module::some_function();
   |                             ^^^^^^^^^^^^^ not found in `another_module`

error[E0425]: cannot find type `SomeType` in module `another_module`
  --> $DIR/compile_error_macro-suppress-errors.rs:37:28
   |
LL |     let _: another_module::SomeType = another_module::Hello::new();
   |                            ^^^^^^^^ not found in `another_module`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
